# DjangoRestFramework_Coursework

./: README.md  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
habit_tracker/: admin.py  apps.py  bot.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
habit_tracker/migrations/: 0001_initial.py  0002_alter_habit_options_habit_action_and_more.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
